Fix to row overflow in samples

--- a/samples/editor-no-toolbar/css/index.css
+++ b/samples/editor-no-toolbar/css/index.css
@@ -12,7 +12,7 @@ body {
     width: calc(100% - 40px);
     height: 600px;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 100%;
 
     margin:0;
     background: rgb(64,64,64);
